Fix: Address white screen flashes in dark mode
Fixes white screen flashes in dark mode for the 404 page and during graph view transitions.

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,24 @@
   text-align: center;
 }
 
+.page-transition-enter {
+  opacity: 0;
+}
+
+.page-transition-enter-active {
+  opacity: 1;
+  transition: opacity 300ms;
+}
+
+.page-transition-exit {
+  opacity: 1;
+}
+
+.page-transition-exit-active {
+  opacity: 0;
+  transition: opacity 300ms;
+}
+
 .logo {
   height: 6em;
   padding: 1.5em;
